More work on speedrun import.